--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lorem-ipsum": "^2.0.8",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "nanoid": "^5.1.0",
